chore: Update NuGet publish workflow to use TOOLKIT_AUTH_TOKEN
This commit updates the GitHub Actions workflow for publishing NuGet packages. It replaces the use of `GITHUB_TOKEN` with `TOOLKIT_AUTH_TOKEN` for authentication when pushing packages to the GitHub Package Registry. This change ensures the workflow uses the correct authentication method.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,5 +33,5 @@ jobs:
       run: |
         dotnet nuget push "./nupkgs/*.nupkg" \
           --source https://nuget.pkg.github.com/taviovieira89/index.json \
-          --api-key ${{ secrets.GITHUB_TOKEN }} \
+          --api-key ${{ secrets.TOOLKIT_AUTH_TOKEN }} \
           --skip-duplicate
